# adventofcode2020

./: CMakeLists.txt  advent-day03.cpp  advent-day04.cpp  advent-day05.cpp  advent-day05b.cpp  advent-day06b.cpp  advent-day07a.cpp  advent-day08a.cpp  advent-day08b.cpp  advent-day09a.cpp  advent-day09b.cpp  advent-day10a.cpp  advent-day10b.cpp  advent-day10c.cpp
