cmake_minimum_required(VERSION 3.17)
project(advent31)
project(advent41)
project(advent51)
project(advent51b)
project(advent61b)

set(CMAKE_CXX_STANDARD 20)

add_executable(advent31 advent-day03.cpp)
add_executable(advent41 advent-day04.cpp)
add_executable(advent51 advent-day05.cpp)
add_executable(advent51b advent-day05b.cpp)
add_executable(advent61b advent-day06b.cpp)